src/wmcads/components/content-card/_content-card.scss
//accessibility styles
@mixin accessibility-hover {
  h2,
  h3 {
    text-decoration: underline;
  }

  &:hover,
  &:focus {
    box-shadow: inset 0 0 0 1px get-color(primary);
  }
}

.wmcads-content-card {
  display: block;
  height: 100%;
  border-bottom: 5px solid get-color(primary);
  color: get-color(text);
  background-color: $white;
  text-decoration: none;

  @at-root a#{&} {
    display: block;
    color: get-color(text);
    text-decoration: none;
    @include accessibility-hover;
  }

  // Modifiers
  &--blue {
    display: block;
    border-bottom: 0;
    color: $white;
    background: get-color(cta);

    h2 {
      color: $white;
    }

    svg {
      width: 60px;
      height: 60px;
      fill: $white;
    }
  }

  &--event {
    h2,
    h3 {
      margin: 0 0 $size-sm 0;
    }
  }

  &--news {
    border: 0;
    background-color: transparent;

    p {
      margin: 0;
    }

    h3 {
      margin: $size-xs 0;

      a {
        margin: $size-xs 0;
      }
    }
  }

  img {
    height: 180px;
    padding: 1px;
    object-fit: cover;

    @media screen and (max-width: $breakpoint-sm) {
      height: auto;
    }
  }

  h3 {
    margin-top: 0;
  }
}

